[tool.poetry]
name = "jax_pep503"
version = "0.2.0"
description = "PEP 503 compliant repository for Jax"
authors = ["Joren Hammudoglu <jhammudoglu@gmail.com>"]
homepage = "https://github.com/jorenham/jax_pep503"
readme = "README.md"
exclude = ["example_project"]

[tool.poetry.urls]
"GitHub" = "https://github.com/jorenham/jax_pep503"
"PEP 503 Repository" = "https://jorenham.github.io/jax_pep503/"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.72,<1.0"
uvicorn = ">=0.17,<1.0"
httpx = ">=0.21,<1.0"
Jinja2 = ">=3.0,<4.0"
yarl = ">=1.7,<2.0"
requests = "^2.27"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
build = 'jax_pep503.build:build_index'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
