[tool.poetry]
name = "jax_pep503"
version = "0.4.1"
description = "PEP 503 compliant repository for Jax"
authors = ["Joren Hammudoglu <jhammudoglu@gmail.com>"]
homepage = "https://jorenham.github.io/jax_pep503/"
repository = "https://github.com/jorenham/jax_pep503"
readme = "README.md"
exclude = ["example_project"]
license = "Apache-2.0"

[tool.poetry.urls]
"GitHub" = "https://github.com/jorenham/jax_pep503"
"PEP 503 Repository" = "https://jorenham.github.io/jax_pep503/"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.75,<1.0"
uvicorn = ">=0.17,<1.0"
Jinja2 = ">=3.0,<4.0"
yarl = ">=1.7,<2.0"
mainpy = "^1.0.0"
httpx = "^0.23.3"
aioboto3 = "^10.4.0"

[tool.poetry.scripts]
build = 'jax_pep503.build:build_index'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
