[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jax_pep503"
version = "0.4.2"
description = "PEP 503 compliant repository for Jax"
authors = ["Joren Hammudoglu <jhammudoglu@gmail.com>"]
homepage = "https://jorenham.github.io/jax_pep503/"
repository = "https://github.com/jorenham/jax_pep503"
readme = "README.md"
exclude = ["example_project"]
license = "Apache-2.0"

[tool.poetry.urls]
"GitHub" = "https://github.com/jorenham/jax_pep503"
"PEP 503 Repository" = "https://jorenham.github.io/jax_pep503/"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.101,<1.0"
uvicorn = ">=0.23,<1.0"
Jinja2 = ">=3.1,<4.0"
httpx = ">=0.24,<1.0"
mainpy = "^1.1.0"
aioboto3 = "^11.3.0"

[tool.poetry.scripts]
build = 'jax_pep503.build:build_index'
